--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^17.0.1",
+    "react-animated-cursor": "^2.1.5",
     "react-dom": "^17.0.1",
     "react-mailto": "^0.4.0",
     "react-player": "^2.6.2",
